see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

20-Dec-2010 Jean-Marie Simonet
 # [#23903] Menu item type external url issues

19-Dec-2010 Jean-Marie Simonet
 # [#23819] Self-Registering Users aren't assigned any usergroup. Thanks Elin.
 # [#22982] fix: JURI::root(true) -> JURI::root() (template preview). Thanks Rune.
 # [#23889] Action ordering com_users. Thanks Sander.
 # [#23880] Contact-form emty. No inputfields. Thanks Bill.
 # [#23820] Missing Lang Strings because of validate.js
 
18-Dec-2010 Ian MacLennan
 # [#23874] JPluginHelper::importPlugin('users') instead of JPluginHelper::importPlugin('user')

18-Dec-2010 Jean-Marie Simonet
 # [#23799] Can't uninstall Beez and Bluestork templates.
 $ Updating Milkyway description
 # [#23865] Missing language string. Thanks Bill.
 
17-Dec-2010 Jean-Marie Simonet
 # [#23670] Non-installed languages display in the Language Manager Installed view. Thanks Pooja.
 # [#23809] Special characters used in menu names should be converted to HTML equivalents. Thanks Christophe.
 # Updating templates sql
 #$ Adding language folders in administrator templates
 $ Correcting language Key
 # [#23843] wrong lang string called by com_messages. Thanks Stefania
 # [#23676] Link Weblinks in Module causes error. Thanks Tim.
 $ Missing weblinks error strings in front-end.
 
17-Dec-2010 Ian MacLennan
 # [#22035] Custom HTML module filtering issues

16-Dec-2010 Jean-Marie Simonet
 $ [#23786] Extension manager language file error. Thanks Bill.
 # [#23800] News feed language direction default value. Thanks Bill.
 $ [#23795] Prevent disabling ALL authentication plugins. Thanks Bill.