@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+21-Dec-2010 Christophe Demko
+ # [#23894] Components menu item visible in disabled menu (Sander Potjer)
+
 20-Dec-2010 Jean-Marie Simonet
  # [#23903] Menu item type external url issues
 
